stateful-demo/infra/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: demo-stripprefix
  namespace: csi-demo
spec:
  stripPrefix:
    prefixes:
      - /demo
