stateful-demo/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: csi-demo
  labels:
    app.kubernetes.io/name: csi-demo
