stateful-demo/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csi-demo-app
  namespace: ryan-demo
spec:
  selector:
    app: csi-demo-app
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
